# searchify

./: .gitignore  agent.py  app.py  backend.py  http_cache.sqlite  main.py  pyproject.toml  streamlit-app.py  streamlitapp.py
